Actualizacion para Win y Linux